# addisonbeck.com

./: .gitignore  README.org  flake.nix  justfile  rust-toolchain.toml
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
.storybook/: main.ts
export-cache/: manifest.json
export-cache/00/: 009EEA8F-7EB5-471B-BFC2-9A84552C421B.json
export-cache/09/: 0937184E-D1E0-4CCA-8AEA-89D0CB34E306.json
export-cache/0B/: 0BB41813-AA67-4404-B992-5165DBE15383.json
export-cache/0D/: 0DC930ED-C578-4437-BB19-343436415CCE.json
export-cache/11/: 11223344-aaaa-bbbb-cccc-ddeeff001122.json
export-cache/13/: 132EA7BD-DC6E-4FD5-A2B7-0EED0BED48AB.json
export-cache/1D/: 1D341DDB-1997-4A9B-8411-D04CC1A296EF.json
export-cache/2D/: 2D72B26D-2EBA-4B09-AC92-BA73AB2CFA5E.json
export-cache/38/: 38C8F564-1A0C-4B0D-AA32-21C4233F6A3D.json
export-cache/39/: 39A65601-867B-4FB8-84A5-FD149CF5A5B3.json
export-cache/40/: 40307E7D-0BC8-415E-AF83-7D50CD651BC9.json
export-cache/49/: 4961FC6E-28ED-421A-85AC-A4B85F45877E.json
export-cache/50/: 50B77D76-6F86-4984-AFE8-0D42A9D353DD.json
export-cache/53/: 53103B7B-0F15-4E90-B2AD-C830675EDE61.json  5379B2CE-52A9-43EF-973E-B5D5C010C9AB.json
export-cache/59/: 59C1C287-03EC-4198-94DF-96AE71882918.json
export-cache/60/: 60E011CC-FFAB-4F55-AACA-8592D435AD69.json
export-cache/63/: 63C439FE-E960-46AA-AF90-231BE06219C9.json
renderer/: Cargo.toml
renderer/src/: main.rs  render.rs  slug.rs  types.rs
scripts/: org-roam-export  org-roam-export.el
site/: astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt
(+31 files in other folders)
