[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "renderer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "pnm"] }
webp = "0.3"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "html", "regex-fancy", "yaml-load"] }
